Add placeholder man pages/templates.

--- a/Makefile.in
+++ b/Makefile.in
@@ -95,10 +95,13 @@ install:	all
 	$(INSTALL) -c -m 755 lprint $(BUILDROOT)$(bindir)
 	$(INSTALL) -d -m 755 $(BUILDROOT)$(mandir)/man1
 	$(INSTALL) -c -m 644 lprint.1 $(BUILDROOT)$(mandir)/man1
+	$(INSTALL) -c -m 644 lprint-config.1 $(BUILDROOT)$(mandir)/man1
+	$(INSTALL) -c -m 644 lprint-jobs.1 $(BUILDROOT)$(mandir)/man1
+	$(INSTALL) -c -m 644 lprint-printers.1 $(BUILDROOT)$(mandir)/man1
+	$(INSTALL) -c -m 644 lprint-send.1 $(BUILDROOT)$(mandir)/man1
+	$(INSTALL) -c -m 644 lprint-server.1 $(BUILDROOT)$(mandir)/man1
 	$(INSTALL) -d -m 755 $(BUILDROOT)$(mandir)/man5
 	$(INSTALL) -c -m 644 lprint.conf.5 $(BUILDROOT)$(mandir)/man5
-	$(INSTALL) -d -m 755 $(BUILDROOT)$(sysconfdir)
-	$(INSTALL) -c -m 644 lprint.conf.default $(BUILDROOT)$(sysconfdir)
 
 
 # Test everything...
