--- a/Makefile.in
+++ b/Makefile.in
@@ -1,7 +1,7 @@
 #
 # LPrint makefile
 #
-# Copyright © 2019 by Michael R Sweet
+# Copyright © 2019-2020 by Michael R Sweet
 #
 # Licensed under Apache License v2.0.  See the file "LICENSE" for more
 # information.
@@ -159,15 +159,20 @@ lprint:	$(OBJS)
 	fi
 
 
-# lprint-png.h from lprint.png
+# lprint-png.h from lprint.png and lprint-png-large.h from lprint-large.png
 pngheaders:
 	echo "Generating lprint-png.h from lprint.png..."
 	echo "static const unsigned char lprint_png[] =" >lprint-png.h
 	echo "{" >>lprint-png.h
 	od -t x1 lprint.png | cut -b12- | awk '{printf("  "); for (i = 1; i <= NF; i ++) printf("0x%s,", $$i); print "";}' >>lprint-png.h
 	echo "};" >>lprint-png.h
+	echo "Generating lprint-large-png.h from lprint-large.png..."
+	echo "static const unsigned char lprint_large_png[] =" >lprint-large-png.h
+	echo "{" >>lprint-large-png.h
+	od -t x1 lprint-large.png | cut -b12- | awk '{printf("  "); for (i = 1; i <= NF; i ++) printf("0x%s,", $$i); print "";}' >>lprint-large-png.h
+	echo "};" >>lprint-large-png.h
 
 
 # Dependencies...
 $(OBJS):	common.h config.h device-common.h driver-common.h lprint.h Makefile
-server-client.o: lprint-png.h
+server-client.o: lprint-png.h lprint-large-png.h
