Add stub for PWG Raster test driver.
Comment out CPCL, EPL, FGL, and PCL drivers for now since I don't have printers
to test those drivers.

Sync up Xcode/snap version with configure script.

Add stub for top-level documentation file.

--- a/Makefile.in
+++ b/Makefile.in
@@ -82,12 +82,8 @@ MAN5		=	\
 OBJS		=	\
 			device-common.o \
 			driver-common.o \
-			driver-cpcl.o \
 			driver-dymo.o \
-			driver-epl1.o \
-			driver-epl2.o \
-			driver-fgl.o \
-			driver-pcl.o \
+			driver-pwg.o \
 			driver-zpl.o \
 			lprint.o \
 			lprint-add.o \
