Add options sub-command.
Start working on main documentation file.

Add changelog file.

Add references to future home page and Github project.

--- a/Makefile.in
+++ b/Makefile.in
@@ -94,6 +94,7 @@ OBJS		=	\
 			lprint-drivers.o \
 			lprint-jobs.o \
 			lprint-modify.o \
+			lprint-options.o \
 			lprint-printers.o \
 			lprint-server.o \
 			lprint-shutdown.o \
