--- a/Makefile.in
+++ b/Makefile.in
@@ -80,7 +80,7 @@ MAN5		=	\
 			man/lprint.conf.5
 
 OBJS		=	\
-			device-common.o \
+			device.o \
 			driver-common.o \
 			driver-dymo.o \
 			driver-pwg.o \
@@ -171,7 +171,7 @@ pngheaders:
 
 
 # Dependencies...
-$(OBJS):	common.h config.h device-common.h driver-common.h lprint.h Makefile
+$(OBJS):	common.h config.h device.h driver.h lprint.h Makefile
 server-client.o: lprint-png.h lprint-large-png.h
 server-print.o: dither.h
 
