Reword - LPrint is a Label Printer Application (since "printer application" is the terminology I've been using for CUPS over the past couple years...)

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 dnl
-dnl LPrint configuration script
+dnl Configuration script for LPrint, a Label Printer Application
 dnl
 dnl Copyright © 2019-2020 by Michael R Sweet
 dnl
