--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -30,7 +30,7 @@ apps:
 parts:
     cups:
         plugin: autotools
-        configflags: [--disable-shared,--enable-static,--with-components=libcupslite]
+        configflags: [--enable-static,--with-components=libcupslite]
         source: https://github.com/apple/cups/releases/download/v2.3.1/cups-2.3.1-source.tar.gz
         build-packages: [libavahi-client-dev, libgnutls28-dev, zlib1g-dev]
         prime:
