Fix sys/random.h check.

--- a/configure.ac
+++ b/configure.ac
@@ -105,7 +105,7 @@ fi
 
 
 dnl Random number support...
-AC_CHECK_HEADER(sys/random.h)
+AC_CHECK_HEADER(sys/random.h, AC_DEFINE(HAVE_SYS_RANDOM_H))
 AC_CHECK_FUNCS(arc4random getrandom gnutls_rnd)
 
 
