--- a/configure.ac
+++ b/configure.ac
@@ -260,7 +260,7 @@ if test -n "$GCC"; then
 	fi
 
 	dnl Show all standard warnings + unused variables when compiling...
-	CFLAGS="-Wall -Wunused -Wno-unused-result -Wno-char-subscripts -Wno-format-y2k $CFLAGS"
+	CFLAGS="-Wall -Wunused -Wno-unknown-warning-option -Wno-unused-result -Wno-char-subscripts -Wno-format-y2k -Wno-maybe-uninitialized -Wno-switch $CFLAGS"
 
 	dnl See if PIE options are supported...
 	AC_MSG_CHECKING(whether compiler supports -fPIE)
